# rpi_digital_signage

./: .env.example  .gitignore  .markdownlint.json  README.md  dev-requirements.txt  launcher.ps1  launcher.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  run_streamlit.ps1  startup.sh  startup_service.sh  uninstall.sh
.github/: copilot-instructions.md
.github/workflows/: lint.yml  test.yml
config/production_types/: README.md  dev_line_1.json  example_line_1.json  example_line_2.json
docs/: ARCHITECTURE.md  DEPLOY.md  DEPLOY_OFFLINE.md  OFFLINE_PYTHON_INSTALL.md  PRODUCTION_TYPE_MIGRATION.md  README.md  REFACTORING_DONE.md  STARTUP.md  prepare_offline.ps1  setup_rpi.sh  setup_rpi_offline.sh
scripts/: README.md  disable_screen_blank.sh  download_python313_packages.sh  download_python313_packages_windows.ps1  download_python_packages.sh  download_python_packages_windows.ps1  hide_mouse_cursor.sh  startup.sh  startup_service.sh  type_check.ps1  type_check.sh  uninstall.sh  watchdog.py
src/: __init__.py
src/api/: __init__.py  main.py
src/api/routes/: production.py  system.py
src/api/services/: plc_service.py
src/backend/: calculators.py  config_helpers.py  system_utils.py  utils.py
src/backend/logging/: __init__.py  logger.py
src/backend/plc/: base.py  plc_client.py  plc_fetcher.py
src/config/: __init__.py  production_config.py  settings.py
src/frontend/: api_client.py  components.py  schemas.py  signage_app.py  styles.py  utils.py
src/schemas/: __init__.py  production.py  production_type.py
tests/: __init__.py  conftest.py
tests/api/: test_api.py  test_plc_service.py
tests/backend/: test_fetch_production_data.py  test_utils.py  test_utils_helpers.py
tests/backend/plc/: __init__.py  test_plc_client.py
tests/config/: __init__.py  test_production_config.py  test_settings.py
tests/frontend/: __init__.py  test_api_client.py  test_components.py  test_styles.py
tests/schemas/: test_production_data.py  test_production_type.py
tests/scripts/: __init__.py  test_watchdog.py
