[project]
name = "rpi-digital-signage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "plotly>=6.4.0",
    "pydantic-settings>=2.12.0",
    "pymcprotocol>=0.3.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
    "streamlit-autorefresh>=1.0.1",
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff.lint]
ignore = ["E402"]  # sys.path操作後のインポートを許可

[dependency-groups]
dev = [
    "pytest",
    "black",
    "ruff",
]
test = [
    "pytest",
]
lint = [
    "ruff",
    "black",
]
